--- a/public/index.html
+++ b/public/index.html
@@ -99,9 +99,10 @@
       logInForm.style.display = "none";
     });
   </script>
+  <script src="script.js"></script>
    <section class="flex-container">
     <div class="flex-wrap-one">
-        <h1>Innovating the Future: Explore the Latest in Technology and Development</h1>
+        <h1>Innovating Beauty trends: Explore the Beauty trends</h1>
 
         <p>Explore the latest beauty trends and reviews on your favourite beauty brands.</p>
     </div>
